--- a/src/main/resources/com/cab302/bugco/home-view.fxml
+++ b/src/main/resources/com/cab302/bugco/home-view.fxml
@@ -7,10 +7,11 @@
 
 <StackPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
            fx:controller="com.cab302.bugco.HomeController"
-           prefWidth="1200" prefHeight="820"
-           styleClass="root-terminal">
+           styleClass="root-terminal"
+           maxWidth="Infinity" maxHeight="Infinity">
 
-    <BorderPane prefWidth="1200" prefHeight="820">
+    <BorderPane maxWidth="Infinity" maxHeight="Infinity">
+
         <top>
             <VBox spacing="10" BorderPane.alignment="CENTER">
                 <HBox alignment="CENTER" styleClass="banner panel">
@@ -23,13 +24,18 @@
         </top>
 
         <center>
-            <GridPane hgap="20" vgap="20">
+            <GridPane hgap="20" vgap="20" maxWidth="Infinity" maxHeight="Infinity">
                 <columnConstraints>
                     <ColumnConstraints percentWidth="40"/>
                     <ColumnConstraints percentWidth="60"/>
                 </columnConstraints>
 
-                <VBox GridPane.columnIndex="0" spacing="8" styleClass="panel">
+                <rowConstraints>
+                    <RowConstraints percentHeight="60" vgrow="ALWAYS"/>
+                    <RowConstraints percentHeight="40" vgrow="ALWAYS"/>
+                </rowConstraints>
+
+                <VBox GridPane.columnIndex="0" spacing="8" styleClass="panel" maxHeight="Infinity" maxWidth="Infinity">
                     <HBox spacing="8" alignment="CENTER_LEFT" styleClass="panel-titlebar">
                         <Circle styleClass="dot-red" radius="6"/>
                         <Circle styleClass="dot-amber" radius="6"/>
@@ -37,30 +43,31 @@
                         <Label text="BUGCO INDUSTRIES ™" styleClass="panel-title"/>
                     </HBox>
 
-                    <StackPane styleClass="panel-body" VBox.vgrow="ALWAYS">
+                    <Pane fx:id="imagePane" styleClass="panel-body"
+                          VBox.vgrow="ALWAYS" maxWidth="Infinity" maxHeight="Infinity">
                         <ImageView fx:id="imageView"
-                                   fitWidth="370"
-                                   preserveRatio="true"
-                                   layoutX="20"
-                                   layoutY="20"/>
-                    </StackPane>
+                                   preserveRatio="true" smooth="true" pickOnBounds="true"/>
+                    </Pane>
                 </VBox>
 
-                <VBox GridPane.columnIndex="1" spacing="8" styleClass="panel">
+                <VBox GridPane.columnIndex="1" spacing="8" styleClass="panel" maxHeight="Infinity" maxWidth="Infinity">
                     <HBox spacing="8" alignment="CENTER_LEFT" styleClass="panel-titlebar">
                         <Circle styleClass="dot-red" radius="6"/>
                         <Circle styleClass="dot-amber" radius="6"/>
                         <Circle styleClass="dot-green" radius="6"/>
                         <Label text="BUGCO  INDUSTRIES ™  LEADERBOARD" styleClass="panel-title"/>
                     </HBox>
-                    <StackPane styleClass="panel-body">
+
+                    <StackPane styleClass="panel-body" VBox.vgrow="ALWAYS" maxHeight="Infinity">
                         <TextArea fx:id="leaderboardArea" editable="false"
-                                  styleClass="terminal-area" prefRowCount="18"/>
+                                  styleClass="terminal-area"
+                                  wrapText="true"
+                                  VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
                     </StackPane>
                 </VBox>
 
                 <VBox GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="2"
-                      spacing="8" styleClass="panel">
+                      spacing="8" styleClass="panel" maxHeight="Infinity" maxWidth="Infinity" VBox.vgrow="ALWAYS">
                     <HBox spacing="8" alignment="CENTER_LEFT" styleClass="panel-titlebar">
                         <Circle styleClass="dot-red" radius="6"/>
                         <Circle styleClass="dot-amber" radius="6"/>
@@ -68,13 +75,16 @@
                         <Label text="BUGCO  INDUSTRIES ™  TERMLINK TERMINAL" styleClass="panel-title"/>
                     </HBox>
 
-                    <VBox spacing="12" styleClass="panel-body">
+                    <VBox spacing="12" styleClass="panel-body" VBox.vgrow="ALWAYS" maxHeight="Infinity">
                         <TextArea fx:id="terminalArea" editable="false" wrapText="true"
-                                  styleClass="terminal-area" prefRowCount="12"/>
+                                  styleClass="terminal-area" prefRowCount="12"
+                                  VBox.vgrow="ALWAYS" maxHeight="Infinity"/>
 
                         <HBox alignment="CENTER" spacing="14">
-                            <Button text="GAME INFO" onAction="#onGameInfo" styleClass="amber-btn"/>
-                            <Button text="LOGOUT" onAction="#onLogout" styleClass="amber-btn"/>
+                            <Button text="GAME INFO" onAction="#onGameInfo" styleClass="amber-btn"
+                                    maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
+                            <Button text="LOGOUT" onAction="#onLogout" styleClass="amber-btn"
+                                    maxWidth="Infinity" HBox.hgrow="ALWAYS"/>
                         </HBox>
 
                         <Button text="INITIALISE HACKING PROTOCOLS" maxWidth="Infinity"
